--- a/Tarea1_Grupo12.ipynb
+++ b/Tarea1_Grupo12.ipynb
@@ -1042,7 +1042,8 @@
     "inner join creadores as c on NFT.id_creador=c.id_creador\n",
     "\t\t  group by c.nombre) as f on c.nombre=f.nombre and f.precio=p.precio\n",
     "where c.nombre like 'Casey' --creador X\n",
-    "order by  c.nombre"
+    "order by  c.nombre\n",
+    "limit 1"
    ]
   },
   {
