--- a/Tarea1_Grupo12.ipynb
+++ b/Tarea1_Grupo12.ipynb
@@ -895,8 +895,9 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "/*Seleccionamos las variables a utilizar, que son el nombre del nft y su precio. Se hizo una relación con la misma tabla de precio filtrada por la fecha mayor, luego se hace un Inner join\n",
-    "con la tabla creadores para sacar el nombre del creador. Finalmente se hace otro inner join con el resultado de la consulta anterior agrupado por nombre, mostrando el mayor precio.\n",
+    "/*Seleccionamos las variables a utilizar, que son el nombre del nft y su precio. Se hizo una relación con la misma tabla de precio \n",
+    "filtrada por la fecha mayor, luego se hace un Inner join con la tabla creadores para sacar el nombre del creador. Finalmente se hace \n",
+    "otro inner join con el resultado de la consulta anterior agrupado por nombre, mostrando el mayor precio.\n",
     "Para finalizar, usamos la condicionante de que solamente muestre los nombres de los NFT que coincidan con el creador X, que en este caso en particular se puso como Casey*/\n",
     "\n",
     "select   nft.nombre as NFT, p.precio as Valor\n",
