--- a/Tarea1_Grupo12.ipynb
+++ b/Tarea1_Grupo12.ipynb
@@ -553,8 +553,9 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "/* Seleccionamos las variables a utilizar, que en este caso es el ID del creador y su nombre (este nombre está concatenado con el apellido), luego agregamos una condicional de que el\n",
-    "Estilo debe ser X, que en este caso en particular le pusimos Anime (dicho valor puede ser cambiado), y luego agregamos que la popularidad debe ser la máxima encontrada gracias a la función\n",
+    "/* Seleccionamos las variables a utilizar, que en este caso es el ID del creador y su nombre (este nombre está \n",
+    "concatenado con el apellido), luego agregamos una condicional de que el Estilo debe ser X, que en este caso en particular \n",
+    "le pusimos Anime (dicho valor puede ser cambiado), y luego agregamos que la popularidad debe ser la máxima encontrada gracias a la función\n",
     "MAX, para que finalmente nos dé el valor con mayor popularidad. Finalmente, ponemos solo el primer elemento encontrado gracias al limit 1.*/\n",
     "\n",
     "SELECT\n",
@@ -626,8 +627,9 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "/* Seleccionamos las variables a utilizar, que en este caso es el nombre del NFT y su tipo. A partir de la tabla PRECIO_NFT, ingresamos a las tablas (NFT) y (Tipos_NFT) mediante\n",
-    "un INNER JOIN. Posteriormente, agregamos una condicional de que debemos seleccionar el máximo precio (más caro) para finalmente poner solo el primer elemento encontrado gracias al limit 1.\n",
+    "/* Seleccionamos las variables a utilizar, que en este caso es el nombre del NFT y su tipo. A partir de la tabla \n",
+    "PRECIO_NFT, ingresamos a las tablas (NFT) y (Tipos_NFT) mediante un INNER JOIN. Posteriormente, agregamos una condicional \n",
+    "de que debemos seleccionar el máximo precio (más caro) para finalmente poner solo el primer elemento encontrado gracias al limit 1.\n",
     "*/\n",
     "\n",
     "SELECT\n",
@@ -662,7 +664,8 @@
    "source": [
     "%%sql\n",
     "/* la SUBTABLA tendrá los usuarios con la cantidad de nfts, usando el inner join para conectar a las tablas (Usuario tiene NFT) \n",
-    " y (Usuarios), luego se ordenará de forma descendiente con un limit 1 y la tabla final es la subtabla ya creada pero con la diferencia de que no lleva el count*/\n",
+    " y (Usuarios), luego se ordenará de forma descendiente con un limit 1 y la tabla final es la subtabla ya creada pero con la \n",
+    " diferencia de que no lleva el count*/\n",
     "\n",
     "SELECT nombre, apellido from(\n",
     "SELECT nombre,apellido, COUNT( (nombre,apellido) )\n",
@@ -696,9 +699,10 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "/* Seleccionamos las variables a utilizar, que en este caso son los ID y el nombre del NFT, posteriormente desde la tabla Precio_NFT, ingresamos a las tablas NFT \n",
-    "y Tipos_NFT mediante un INNER JOIN, luego agrupamos los datos mediante un GROUP BY ordenándolos de manera descendiente respecto a la cantidad de ID_nft, para finalmente poner solo el \n",
-    "primer elemento encontrado gracias al limit 1. */\n",
+    "/* Seleccionamos las variables a utilizar, que en este caso son los ID y el nombre del NFT, posteriormente desde la tabla \n",
+    "Precio_NFT, ingresamos a las tablas NFT y Tipos_NFT mediante un INNER JOIN, luego agrupamos los datos mediante un GROUP BY \n",
+    "ordenándolos de manera descendiente respecto a la cantidad de ID_nft, para finalmente poner solo el  primer elemento encontrado \n",
+    "gracias al limit 1. */\n",
     "\n",
     "SELECT \n",
     "    NFT.ID_nft as ID , NFT.nombre as NFT\n",
@@ -821,8 +825,9 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "/* Seleccionamos las variables a utilizar, que son los NFT y el precio de cada NFT, posteriormente desde la tabla NFT, ingresamos a la tabla de Precio_NFT a través de un INNER JOIN \n",
-    "y consultamos por los precios de los NFT que se encuentren en el intervalo de fecha requerido mediante un BETWEEN */\n",
+    "/* Seleccionamos las variables a utilizar, que son los NFT y el precio de cada NFT, posteriormente desde la tabla NFT, \n",
+    "ingresamos a la tabla de Precio_NFT a través de un INNER JOIN y consultamos por los precios de los NFT que se encuentren \n",
+    "en el intervalo de fecha requerido mediante un BETWEEN */\n",
     "\n",
     "SELECT\n",
     "    NFT.nombre AS NFT,PRECIO_NFT.precio  \n",
@@ -898,7 +903,8 @@
     "/*Seleccionamos las variables a utilizar, que son el nombre del nft y su precio. Se hizo una relación con la misma tabla de precio \n",
     "filtrada por la fecha mayor, luego se hace un Inner join con la tabla creadores para sacar el nombre del creador. Finalmente se hace \n",
     "otro inner join con el resultado de la consulta anterior agrupado por nombre, mostrando el mayor precio.\n",
-    "Para finalizar, usamos la condicionante de que solamente muestre los nombres de los NFT que coincidan con el creador X, que en este caso en particular se puso como Casey*/\n",
+    "Para finalizar, usamos la condicionante de que solamente muestre los nombres de los NFT que coincidan con el creador X, que en este caso en particular \n",
+    "se puso como Casey*/\n",
     "\n",
     "select   nft.nombre as NFT, p.precio as Valor\n",
     "from precio_nft as p inner join (select max(fecha) as fecha from precio_nft group by id_nft ) as p2 on p.fecha=p2.fecha\n",
