--- a/Tarea1_Grupo12.ipynb
+++ b/Tarea1_Grupo12.ipynb
@@ -904,7 +904,7 @@
     "filtrada por la fecha mayor, luego se hace un Inner join con la tabla creadores para sacar el nombre del creador. Finalmente se hace \n",
     "otro inner join con el resultado de la consulta anterior agrupado por nombre, mostrando el mayor precio.\n",
     "Para finalizar, usamos la condicionante de que solamente muestre los nombres de los NFT que coincidan con el creador X, que en este caso en particular \n",
-    "se puso como Casey*/\n",
+    "se puso como Casey. Además, agregamos un limit 1 para que solo muestre un valor*/\n",
     "\n",
     "select   nft.nombre as NFT, p.precio as Valor\n",
     "from precio_nft as p inner join (select max(fecha) as fecha from precio_nft group by id_nft ) as p2 on p.fecha=p2.fecha\n",
